...
                            .asPaddingValues()
                            .calculateBottomPadding() + 72.dp,
                ),
                state = lazyListState,
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("Run-DescriptorsList"),
            ) {
                val allSectionsHaveValues = state.list.entries.all { it.value.any() }
                state.list.forEach { (type, descriptorsMap) ->
                    if (allSectionsHaveValues && descriptorsMap.isNotEmpty()) {
                        item(key = type) {
                            TestDescriptorTypeTitle(
...
