...
                )
            }

            Box {
                val lazyListState = rememberLazyListState()
                LazyColumn(
                    modifier = Modifier.testTag("Descriptors-List"),
                    contentPadding = PaddingValues(
                        top = 8.dp,
                        bottom = 16.dp + (if (canCreateTest) 80.dp else 0.dp),
                    ),
                    state = lazyListState,
                ) {
...
